// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`React Credit Card should match amex snapshot 1`] = `
<DocumentFragment>
  <div
    class="ReactCreditCard__container"
  >
    <div
      class="ReactCreditCard ReactCreditCard--amex ReactCreditCard--identified"
    >
      <div
        class="ReactCreditCard__front"
      >
        <div
          class="ReactCreditCard__lower"
        >
          <div
            class="ReactCreditCard__shiny"
          />
          <img
            class="ReactCreditCard__logo"
            src=""
          />
          <div
            class="ReactCreditCard__number ReactCreditCard__display"
          >
            3400 000000 00009
          </div>
          <div
            class="ReactCreditCard__name ReactCreditCard__display"
          >
            FULL NAME
          </div>
        </div>
      </div>
      <div
        class="ReactCreditCard__back"
      >
        <div
          class="ReactCreditCard__bar"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`React Credit Card should match snapshot 1`] = `
<DocumentFragment>
  <div
    class="ReactCreditCard__container"
  >
    <div
      class="ReactCreditCard ReactCreditCard--unknown"
    >
      <div
        class="ReactCreditCard__front"
      >
        <div
          class="ReactCreditCard__lower"
        >
          <div
            class="ReactCreditCard__shiny"
          />
          <img
            class="ReactCreditCard__logo"
            src=""
          />
          <div
            class="ReactCreditCard__number ReactCreditCard__display"
          >
            •••• •••• •••• •••• 
          </div>
          <div
            class="ReactCreditCard__name ReactCreditCard__display"
          >
            FULL NAME
          </div>
        </div>
      </div>
      <div
        class="ReactCreditCard__back"
      >
        <div
          class="ReactCreditCard__bar"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
